MangoBajito/tests/Lenguajes_II/Operacion/errors/07-decremento.mng
# Test 07: Operacion de errores en decremento.
se_prende(){
	culito decl0 : mango;
	decl0--;

	culito decl1 : manguita;
	decl1--;
	
	culito decl2 : manguangua;
	decl2--;

	culito decl3 : negro;
	decl3--;

	culito decl4 : higuerote;
	decl4--;

	culito decl5 : tas_claro;
	decl5--;
};